test/corpus/fields.txt
================
Field mutability
================

struct State {
    let id:int
    var count:int
    private var secret:int
    public static var instances:int
}

class User {
    private let id:int
    public var name:str
    protected let generation:int = 1
}

---

(source_file
  (structure_definition
    (identifier)
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type))))
  (structure_definition
    (identifier)
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type)))
    (structure_field
      (identifier)
      (type
        (builtin_type))
      (expression
        (integer_literal)))))
