test/corpus/inheritance.txt
==================
Class inheritance
==================

class Entity {}

class Player : Entity {
    pub init(id:int) : super(id) {}
}

---

(source_file
  (structure_definition
    (identifier))
  (structure_definition
    (identifier)
    (named_type
      (type_identifier))
    (constructor_definition
      (parameter_list
        (parameter
          (identifier)
          (type
            (builtin_type))))
      (argument_list
        (expression
          (identifier)))
      (block))))
